--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "Repository for playwright practice",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test",
+    "test:headed": "npx playwright test --headed",
+    "test:pulpit": "npm run test tests/demo-bank-tests/pulpit.spec.ts",
+    "test:pulpit:headed": "npm run test tests/demo-bank-tests/pulpit.spec.ts -- --headed"
+  }, 
   "keywords": [],
   "author": "",
   "license": "ISC",
