--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "npx playwright test",
     "test:headed": "npx playwright test --headed",
     "test:pulpit": "npm run test tests/demo-bank-tests/pulpit.spec.ts",
-    "test:pulpit:headed": "npm run test tests/demo-bank-tests/pulpit.spec.ts -- --headed"
+    "test:pulpit:headed": "npm run test tests/demo-bank-tests/pulpit.spec.ts -- --headed",
+    "test:login": "npx playwright test --grep \"@login\""
   }, 
   "keywords": [],
   "author": "",
